--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=TRACE
+# logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=TRACE
+spring.thymeleaf.template-loader-path: classpath:/templates
+spring.thymeleaf.suffix: .html
+spring.thymeleaf.cache: false
+
+# Main page
+welcom.message=Spring Boot & Thymeleaf Revision
+error.message=First Name & Last Name are required!
