--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.thymeleaf.suffix: .html
 spring.thymeleaf.cache: false
 
 # Main page
-welcom.message=Spring Boot & Thymeleaf Revision
+welcome.message=Spring Boot & Thymeleaf Revision
 error.message=First Name & Last Name are required!
